--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "./src/app.ts",
   "scripts": {
-    "devStart": "nodemon"
+    "start": "nodemon"
   },
   "keywords": [],
   "author": "",
