--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "./src/app.ts",
   "scripts": {
-    "start": "nodemon"
+    "start": "nodemon",
+    "build": "npm install && npx tsc"
   },
   "keywords": [],
   "author": "",
