--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "./src/app.ts",
   "scripts": {
-    "start": "nodemon",
-    "build": "npm install && npx tsc"
+    "devStart": "nodemon",
+    "build": "npm install && npx tsc",
+    "start": "node"
   },
   "keywords": [],
   "author": "",
