--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "devStart": "nodemon",
     "build": "npm install && npx tsc",
-    "start": "node ./dist/app.js"
+    "start": "node ./dist/app.js",
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
@@ -23,7 +24,9 @@
     "mongodb": "^6.5.0",
     "mongodb-memory-server": "^9.1.7",
     "mongoose": "^8.2.1",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0"
   },
   "devDependencies": {
     "@babel/preset-typescript": "^7.23.3",
@@ -34,6 +37,8 @@
     "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.11.26",
     "@types/supertest": "^6.0.2",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.6",
     "jest": "^29.7.0",
     "joi-to-typescript": "^4.13.0",
     "nodemon": "^3.1.0",
