--- a/package.json
+++ b/package.json
@@ -7,18 +7,21 @@
     "devStart": "nodemon",
     "build": "npm install && npx tsc",
     "start": "node ./dist/app.js",
-    "test": "jest"
+    "test": "cross-env NODE_ENV=test jest"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/jest": "^29.5.12",
+    "@types/supertest": "^6.0.2",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
     "express-validator": "^7.0.1",
+    "jest": "^29.7.0",
     "joi": "^17.12.2",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.5.0",
@@ -26,25 +29,27 @@
     "mongoose": "^8.2.1",
     "multer": "^1.4.5-lts.1",
     "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.0"
+    "swagger-ui-express": "^5.0.0",
+    "ts-jest": "^29.1.2"
   },
   "devDependencies": {
-    "@babel/preset-typescript": "^7.23.3",
     "@types/bcryptjs": "^2.4.6",
+    "@types/chai": "^4.3.14",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
-    "@types/jest": "^29.5.12",
     "@types/jsonwebtoken": "^9.0.6",
+    "@types/mocha": "^10.0.6",
     "@types/node": "^20.11.26",
-    "@types/supertest": "^6.0.2",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.6",
-    "jest": "^29.7.0",
+    "chai": "^5.1.0",
+    "cross-env": "^7.0.3",
     "joi-to-typescript": "^4.13.0",
+    "mocha": "^10.3.0",
     "nodemon": "^3.1.0",
     "supertest": "^6.3.4",
-    "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
+    "tsconfig-paths": "^4.2.0",
     "typescript": "^5.4.2"
   }
 }
